--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.zy.materialdesigndemo">
+    package="com.zy.materialdesigndemo">
 
     <application
         android:allowBackup="true"
@@ -11,15 +11,16 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TabLayoutActivity">
-        </activity>
-        <activity android:name=".TabToolBarLayout">
-        </activity>
+        <activity android:name=".TabLayoutActivity" />
+        <activity android:name=".TabToolBarLayout" />
+        <activity android:name=".ToolBarActivity" />
+        <activity android:name=".TransitionActivity" />
+        <activity android:name=".TransitionDetailActivity"></activity>
     </application>
 
 </manifest>
